--- a/src/View/anmeldung.html
+++ b/src/View/anmeldung.html
@@ -43,75 +43,75 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Logo</a>
+
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#">Products</a></li>
-                <li><a href="#">Deals</a></li>
-                <li><a href="#">Stores</a></li>
-                <li><a href="#">Contact</a></li>
+
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#"><span class="glyphicon glyphicon-user"></span> Your Account</a></li>
-                <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
+                <li><a href="/anmelden"><span class="glyphicon glyphicon-user"></span> Ihr Account</a></li>
+                <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Wahrenkorb</a></li>
             </ul>
         </div>
     </div>
 </nav>
 
-<div class="container">
-    <div class="row">
-        <div class="col-sm-4">
-            <div class="panel panel-primary">
-                <div class="panel-heading">BLACK FRIDAY DEAL</div>
-                <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-                <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
-            </div>
-        </div>
-        <div class="col-sm-4">
-            <div class="panel panel-danger">
-                <div class="panel-heading">BLACK FRIDAY DEAL</div>
-                <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-                <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
-            </div>
-        </div>
-        <div class="col-sm-4">
-            <div class="panel panel-success">
-                <div class="panel-heading">BLACK FRIDAY DEAL</div>
-                <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-                <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
-            </div>
-        </div>
-    </div>
-</div><br>
+<form action="formular_verarbeiten.php" method="get">
+    <p>Gib deinen Namen ein: <input type="text" name="benutzername" /></p>
+    <input type="submit" value="absenden" />
+</form>
 
-<div class="container">
-    <div class="row">
-        <div class="col-sm-4">
-            <div class="panel panel-primary">
-                <div class="panel-heading">BLACK FRIDAY DEAL</div>
-                <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-                <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
+<div class="container-fluid mt-3">
+    <h4 class="mb-2"></h4>
+    <form action="formular_verarbeiten.php" method="get">
+        <div class="form-row">
+            <div class="form-group col-sm-6">
+                <label for="myUsername">Benutzername</label>
+                <input type="text" class="form-control"
+                       id="myUsername" name="Benutzername" placeholder="Benutzername">
+            </div>
+            <div class="form-group col-sm-6">
+                <label for="myPassword">Password</label>
+                <input type="password" class="form-control"
+                       id="myPassword" placeholder="Password">
             </div>
         </div>
-        <div class="col-sm-4">
-            <div class="panel panel-primary">
-                <div class="panel-heading">BLACK FRIDAY DEAL</div>
-                <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-                <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
-            </div>
+        <div class="form-group">
+            <label >Straße</label>
+            <input type="text" class="form-control"
+                   id="myAddress" placeholder="Hauptstr. 1">
         </div>
-        <div class="col-sm-4">
-            <div class="panel panel-primary">
-                <div class="panel-heading">BLACK FRIDAY DEAL</div>
-                <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-                <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
+
+        <div class="form-row">
+            <div class="form-group col-sm-6">
+                <label for="myCity">Stadt</label>
+                <input type="text" class="form-control" id="myCity">
             </div>
+            <div class="form-group col-sm-4">
+                <label for="myState">Land</label>
+                <select id="myState" class="form-control">
+                    <option selected>Bitte wählen Sie aus</option>
+                    <option>Deutschland</option>
+                    <option>USA</option>
+                    <option>Frankreich</option>
+                    <option>Spanien</option>
+                </select>
+            </div>
+
         </div>
-    </div>
-</div><br><br>
+
+
+
+        <input type="submit" class="btn btn-primary" value="Anmelden" />
+
+    </form>
+</div>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script><br><br>
 
 <footer class="container-fluid text-center">
     <p>Online Store Copyright</p>
