--- a/src/View/page1.html
+++ b/src/View/page1.html
@@ -7,24 +7,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <style>
-        /* Remove the navbar's default rounded borders and increase the bottom margin */
-        .navbar {
-            margin-bottom: 50px;
-            border-radius: 0;
-        }
+    <link rel="stylesheet" type="text/css" href="css/basic.css" media="screen" />
 
-        /* Remove the jumbotron's default bottom margin */
-        .jumbotron {
-            margin-bottom: 0;
-        }
-
-        /* Add a gray background color and some padding to the footer */
-        footer {
-            background-color: #f2f2f2;
-            padding: 25px;
-        }
-    </style>
 </head>
 <body>
 
@@ -47,12 +31,12 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
+                <li class="active"><a href="/">Home</a></li>
                 <li><a href="#">Products</a></li>
 
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/anmelden"><span class="glyphicon glyphicon-user"></span> Ihr Account</a></li>
+                <li><a href="/login"><span class="glyphicon glyphicon-user"></span> Ihr Account</a></li>
                 <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span>Wahrenkorb</a></li>
             </ul>
         </div>
