--- a/src/View/anmeldung.html
+++ b/src/View/anmeldung.html
@@ -84,7 +84,7 @@
         <div class="form-group col-sm-6">
             <label for="Straße">Straße</label>
             <input type="text" class="form-control"
-                   id="Straße" placeholder="Hauptstr. 1" name="Straße">
+                   id="Straße" placeholder="Hauptstr. 1" name="Strasse">
         </div>
 
         <div class="form-row">
@@ -107,7 +107,7 @@
 
 
 
-        <input type="submit" class="btn btn-dark btn-block" value="Anmelden" />
+        <input type="submit" class="btn btn-black btn-block"  style="color:MediumSeaGreen" value="Anmelden" />
 
     </form>
 </div>
