--- a/src/View/login.html
+++ b/src/View/login.html
@@ -44,13 +44,13 @@
 </nav>
 
 <div class="container-fluid">
-    <div class="row no-gutter mr165">
+    <div class="row no-gutter ">
         <div class="d-none d-md-flex col-md-4 col-lg-6 "> <img class="bg-image" width="600" height="200" src="../Bilder/blog-wp-login.png">  </div>
         <div class="col-md-8 col-lg-6">
             <div class="login d-flex align-items-center py-5">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-9 col-lg-8 mx-auto">
+                        <div class="col-md-9 col-lg-8 mx-auto ">
                             <h3 class="login-heading mb-4">Login</h3>
                             <form>
                                 <div class="form-label-group">
