--- a/src/View/login.html
+++ b/src/View/login.html
@@ -48,7 +48,7 @@
         <div class="d-none d-md-flex col-md-4 col-lg-6 "> <img class="bg-image" width="600" height="200" src="../Bilder/blog-wp-login.png">  </div>
         <div class="col-md-8 col-lg-6">
             <div class="login d-flex align-items-center py-5">
-                <div class="container">
+                <div class="">
                     <div class="row">
                         <div class="col-md-9 col-lg-8 mx-auto ">
                             <h3 class="login-heading mb-4">Login</h3>
