--- a/src/View/anmeldung.html
+++ b/src/View/anmeldung.html
@@ -12,10 +12,9 @@
 </head>
 <body>
 
-<div class="jumbotron">
-    <div class="container text-center">
-        <h1>Online Store</h1>
-        <p>Plumbus und Fake Türen</p>
+<div class="BildStart">
+    <div class="bildOben">
+        <h1 style="font-size:50px">Cookie Shop</h1>
     </div>
 </div>
 
@@ -118,11 +117,8 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script><br><br>
 
 <footer class="container-fluid text-center">
-    <p>Online Store Copyright</p>
-    <form class="form-inline">Get deals:
-        <input type="email" class="form-control" size="50" placeholder="Email Address">
-        <button type="button" class="btn btn-danger">Sign Up</button>
-    </form>
+    <div class="Bildunten">
+    </div>
 </footer>
 
 </body>
