--- a/src/View/login.html
+++ b/src/View/login.html
@@ -12,10 +12,9 @@
 </head>
 <body>
 
-<div class="jumbotron">
-    <div class="container text-center">
-        <h1>Online Store</h1>
-        <p>Plumbus und Fake Türen</p>
+<div class="BildStart">
+    <div class="bildOben">
+        <h1 style="font-size:50px">Cookie Shop</h1>
     </div>
 </div>
 
@@ -63,7 +62,7 @@
 
                                 <div class="form-label-group">
                                     <label for="password">Password</label>
-                                    <input type="password" class="form-control" name="password"placeholder="Password" required  style="margin-bottom: 13px;">
+                                    <input type="password" class="form-control" name="password" placeholder="Password" required  style="margin-bottom: 13px;">
 
                                 </div>
 
@@ -87,11 +86,8 @@
 
 
 <footer class="container-fluid text-center">
-    <p>Online Store Copyright</p>
-    <form class="form-inline">Get deals:
-        <input type="email" class="form-control" size="50" placeholder="Email Address">
-        <button type="button" class="btn btn-danger">Sign Up</button>
-    </form>
+    <div class="Bildunten">
+    </div>
 </footer>
 
 </body>
