--- a/src/css/basic.css
+++ b/src/css/basic.css
@@ -23,3 +23,40 @@ h3 {
     letter-spacing: 1px;
     font-weight: inherit;
 }
+
+
+body {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.BildStart {
+    background-image: url("../Bilder/brownie.png");
+    background-color: #cccccc;
+    height: 500px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.bildOben {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    background-color: #111;
+}
+
+.Bildunten {
+    background-image: url("../Bilder/cookie.jpg");
+    background-color: #cccccc;
+    height: 200px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
