--- a/src/View/anmeldung.html
+++ b/src/View/anmeldung.html
@@ -54,50 +54,49 @@
             <div class="form-group col-sm-6">
                 <label for="myUsername">Benutzername</label>
                 <input type="text" class="form-control"
-                       id="myUsername" name="Benutzername" placeholder="Benutzername">
+                       id="myUsername" name="Benutzername" placeholder="Benutzername" required>
             </div>
 
             <div class="form-group col-sm-6">
                 <label for="Email">Email</label>
                 <input type="text" class="form-control"
-                       id="Email" placeholder="Email" name="Email">
+                       id="Email" placeholder="Email" name="Email" required>
             </div>
 
             <div class="form-group col-sm-6">
                 <label for="myPassword">Password</label>
                 <input type="password" class="form-control"
-                       id="myPassword" placeholder="Password" name="Password">
+                       id="myPassword" placeholder="Password" name="Password" required>
             </div>
 
             <div class="form-group col-sm-6">
                 <label for="Vorname">Vorname</label>
                 <input type="text" class="form-control"
-                       id="Vorname" placeholder="Vorname" name="Vorname">
+                       id="Vorname" placeholder="Vorname" name="Vorname" required>
             </div>
 
             <div class="form-group col-sm-6">
                 <label for="Nachname">Nachname</label>
                 <input type="text" class="form-control"
-                       id="Nachname" placeholder="Nachname" name="Nachname">
+                       id="Nachname" placeholder="Nachname" name="Nachname" required>
             </div>
 
         </div>
         <div class="form-group col-sm-6">
             <label for="Straße">Straße</label>
             <input type="text" class="form-control"
-                   id="Straße" placeholder="Hauptstr. 1" name="Strasse">
+                   id="Straße" placeholder="Hauptstr. 1" name="Strasse" required>
         </div>
 
         <div class="form-row">
             <div class="form-group col-sm-6">
                 <label for="myCity">Stadt</label>
-                <input type="text" placeholder="Stadt" class="form-control" id="myCity" name="Stadt">
+                <input type="text" placeholder="Stadt" class="form-control" id="myCity" name="Stadt" required>
             </div>
             <div class="form-group col-sm-6">
                 <label for="myState" >Land</label>
-                <select style="margin-bottom: 20px;" id="myState" class="form-control" name="Land">
-                    <option selected>Bitte wählen Sie aus</option>
-                    <option>Deutschland</option>
+                <select style="margin-bottom: 20px;" id="myState" class="form-control" name="Land" required>
+                    <option selected>Deutschland</option>
                     <option>USA</option>
                     <option>Frankreich</option>
                     <option>Spanien</option>
