--- a/src/View/login.html
+++ b/src/View/login.html
@@ -42,6 +42,8 @@
     </div>
 </nav>
 
+<form action="login_verarbeiten.php" method="post">
+
 <div class="container-fluid">
     <div class="row no-gutter ">
         <div class="d-none d-md-flex col-md-4 col-lg-6 "> <img class="bg-image" width="600" height="200" src="../Bilder/blog-wp-login.png">  </div>
@@ -63,7 +65,6 @@
                                 <div class="form-label-group">
                                     <label for="password">Password</label>
                                     <input type="password" class="form-control" name="password" placeholder="Password" required  style="margin-bottom: 13px;">
-
                                 </div>
 
 
@@ -83,7 +84,7 @@
     </div>
 </div>
 
-
+</form>
 
 <footer class="container-fluid text-center">
     <div class="Bildunten">
