--- a/src/View/login.html
+++ b/src/View/login.html
@@ -64,7 +64,7 @@
 
                                 <div class="form-label-group">
                                     <label for="password">Password</label>
-                                    <input type="password" class="form-control" name="password" placeholder="Password" required  style="margin-bottom: 13px;">
+                                    <input type="password" class="form-control" name="Password" placeholder="Password" required  style="margin-bottom: 13px;">
                                 </div>
 
 
