--- a/src/View/page1.html
+++ b/src/View/page1.html
@@ -32,7 +32,7 @@
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="/">Home</a></li>
-                <li><a href="#">Products</a></li>
+                <li><a href="/product">Products</a></li>
 
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -68,8 +68,7 @@
 </div><br><br>
 
 <footer class="container-fluid text-center">
-    <div class="Bildunten">
-    </div>
+    <div class="Bildunten"> </div>
 </footer>
 
 </body>
