--- a/src/View/page1.html
+++ b/src/View/page1.html
@@ -32,7 +32,7 @@
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="/">Home</a></li>
-                <li><a href="#">Products</a></li>
+                <li><a href="/ladeprodukt">Products</a></li>
 
             </ul>
             <ul class="nav navbar-nav navbar-right">
