--- a/src/View/product.html
+++ b/src/View/product.html
@@ -54,28 +54,32 @@
     </div>
 </nav>
 
-<?php
-
-                    if (isset($_SESSION["produkt"])) {
-
-                        $peter[] = ($_SESSION["produkt"]);
-
-                        $Bild = "../Bilder/".$peter[0][0]['Bild'];
-                        $Überschrift = $peter[0][0]['Bezeichnung'];
-                        $Beschreibung = $peter[0][0]['Beschreibung'];
-                        $Preis = $peter[0][0]['Preis'];
-
-                    }else{
-                        echo 'Nix registriert';
-                }
-
-?>
 
 <div class="container">
+
+    <?php
+
+        if (isset($_SESSION["produkt"])) {
+            $counter = 0;
+            $peter[] = ($_SESSION["produkt"]);
+
+            foreach($peter as $data){
+                while($counter < count($data)){
+                    //echo $data[$counter]['Bezeichnung'];
+                    $Bild = "../Bilder/".$data[$counter]['Bild'];
+                    $Beschreibung = $data[$counter]['Beschreibung'];
+                    $Überschrift = $data[$counter]['Bezeichnung'];
+                    $Preis = $data[$counter]['Preis'];
+                    //echo $Bild;
+                    //echo $Beschreibung;
+                    //echo $Überschrift;
+                    //echo $Preis;
+    ?>
+
     <div class="row">
         <div class="col-sm-8">
-                <h1><?php echo $Überschrift ?></h1>
-                <div class="produktbild"><img src="<?php echo $Bild ?>" alt="Image" style="float:left"; width="250" height="200" ></div>
+            <h1><?php echo $Überschrift ?></h1>
+            <div class="produktbild"><img src="<?php echo $Bild ?>" alt="Image" style="float:left"; width="250" height="200" ></div>
 
             <div class="col-sm-8">
                 <p> <?php echo $Beschreibung ?> </p>
@@ -87,10 +91,17 @@
             </div>
 
         </div>
-
-
-
     </div>
+    <?php
+                        $counter = $counter + 1;
+                        //echo count($data);
+                    }
+                }// Ende foreach
+            }else{
+                echo 'Nix registriert';
+        }
+    ?>
+
 </div><br>
 
 <br><br>
