--- a/src/View/product.html
+++ b/src/View/product.html
@@ -90,7 +90,7 @@
                 </div>
 
                 <div class="col-sm-6">
-                    <button name=\"warenkorb\" value="<?php echo $IDProdukt ?>">In den Warenkorb</button>
+                    <button name="warenkorbid" value="<?php echo $IDProdukt ?>">In den Warenkorb</button>
                 </div>
 
             </div>
