dynmisch while fehlt

--- a/src/View/product.html
+++ b/src/View/product.html
@@ -92,6 +92,7 @@
                     //echo $Überschrift;
                     //echo $Preis;
     ?>
+    <hr style="height:2px;border-width:0;color:gray;background-color:gray">
     <form action="warenkorb.php" method="post">
     <div class="row">
         <div class="col-sm-8">
