--- a/src/View/warenkorb.html
+++ b/src/View/warenkorb.html
@@ -51,7 +51,7 @@
                 <li><a href="/login"><span class="glyphicon glyphicon-user"></span><?php echo $user ?></a></li>
 
                 <?php if ($warenkorb==1) { ?>
-                <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span>Wahrenkorb</a></li>
+                <li><a href="/warenkorb"><span class="glyphicon glyphicon-shopping-cart"></span>Wahrenkorb</a></li>
                 <?php } else { ?>
                 <?php } ?>
 
