dynmisch while fehlt

--- a/src/View/page1.html
+++ b/src/View/page1.html
@@ -61,28 +61,25 @@
 </nav>
 
 <div class="container">
+
+
+
     <div class="row">
         <div>
             <p>In unserem Shop bieten wir viele verschiedenen Sorten von selbstgemachten Cookies an. Egal ob Glutenfrei, gefüllt oder
             mit schokostückchen, wir bieten für jeden Geschmack etwas an!</p>
         </div>
 
+        <div class="blib">
+            <img src="../Bilder/kekks.png" alt="Paris" width="300" height="300">
+        </div>
+
     </div>
+
+
 </div><br>
 
-<div class="container">
-    <div class="row">
-        <div class="col-sm-4">
-            <
-        </div>
-        <div class="col-sm-4">
-
-        </div>
-        <div class="col-sm-4">
-
-        </div>
-    </div>
-</div><br><br>
+<br><br>
 
 <footer class="container-fluid text-center">
     <div class="Bildunten">
