--- a/src/View/page1.html
+++ b/src/View/page1.html
@@ -19,15 +19,21 @@
 </div>
 
 <?php
-                    session_start();
-                     if (isset($_SESSION["Benutzer"])) {
 
-                       $user = $_SESSION["Benutzer"];
-                       $warenkorb = 1;
-                    }else{
-                        $user = "Ihr Account";
-                        $warenkorb = 0;
-                }
+    session_start();
+     if (isset($_SESSION["Benutzer"])) {
+
+       $user = $_SESSION["Benutzer"];
+       $warenkorb = 1;
+    }else{
+        $user = "Ihr Account";
+        $warenkorb = 0;
+    }
+
+    //  gesuchtes Produkt raus nehmen
+    if (isset($_SESSION["sucheProdukt"])) {
+        unset($_SESSION["sucheProdukt"]);
+    }
 
 ?>
 
