--- a/src/View/page1.html
+++ b/src/View/page1.html
@@ -58,6 +58,7 @@
 
                 <?php if ($warenkorb==1) { ?>
                 <li><a href="/warenkorb"><span class="glyphicon glyphicon-shopping-cart"></span>Warenkorb</a></li>
+                <li><a href="/logout"><span class="glyphicon "></span>Logout</a></li>
                 <?php } else { ?>
                 <?php } ?>
 
