dynmisch while fehlt

--- a/src/View/warenkorb.html
+++ b/src/View/warenkorb.html
@@ -64,8 +64,7 @@
 <div class="container">
     <div class="row">
         <div>
-            <p>In unserem Shop bieten wir viele verschiedenen Sorten von selbstgemachten Cookies an. Egal ob Glutenfrei, gefüllt oder
-                mit schokostückchen, wir bieten für jeden Geschmack etwas an!</p>
+            <p>Schön, dass Sie sich für einen leckeren Cookie interessieren, jetzt dauert es nicht mehr lange bis der Cookie bei Ihnen daheim ist!!</p>
         </div>
 
     </div>
@@ -104,6 +103,8 @@
                     <div class="col-sm-6">
                         <p> Preis: <?php echo $Preis ?> €/100 gramm  </p>
                         <p> Menge: <?php echo $Menge ?></p>
+
+                        <button name="ButtonLoeschen" id="loeschen" value="<?php echo $IDProdukt ?>" class="btn btn-black btn-block"  style="color:white">Produkt entfernen</button>
                     </div>
 
                 </div>
