dynmisch while fehlt

--- a/src/View/warenkorb.html
+++ b/src/View/warenkorb.html
@@ -104,7 +104,7 @@
                         <p> Preis: <?php echo $Preis ?> €/100 gramm  </p>
                         <p> Menge: <?php echo $Menge ?></p>
 
-                        <button name="ButtonLoeschen" id="loeschen" value="<?php echo $IDProdukt ?>" class="btn btn-black btn-block"  style="color:white">Produkt entfernen</button>
+                        <button onclick="loescheProdukt()" name="ButtonLoeschen" id="loeschen" value="<?php echo $IDProdukt ?>" class="btn btn-black btn-block"  style="color:white">Produkt entfernen</button>
                     </div>
 
                 </div>
