--- a/src/View/warenkorb.html
+++ b/src/View/warenkorb.html
@@ -91,7 +91,7 @@
                     //echo $Preis;
     ?>
     <hr style="height:2px;border-width:0;color:gray;background-color:gray">
-    <form action="warenkorb.php" method="post">
+    <form action="warenkorb_loeschen.php" method="post">
         <div class="row">
             <div class="col-sm-8">
                 <h1><?php echo $Überschrift ?></h1>
@@ -104,7 +104,7 @@
                         <p> Preis: <?php echo $Preis ?> €/100 gramm  </p>
                         <p> Menge: <?php echo $Menge ?></p>
 
-                        <button onclick="loescheProdukt('<?php echo $IDProdukt; ?>')" name="ButtonLoeschen" id="loeschen" value="<?php echo $IDProdukt ?>" class="btn btn-black btn-block"  style="color:white">Produkt entfernen</button>
+                        <button name="ButtonLoeschen" id="loeschen" value="<?php echo $IDProdukt ?>" class="btn btn-black btn-block"  style="color:white">Produkt entfernen</button>
                     </div>
 
                 </div>
