--- a/src/View/bestellungende.html
+++ b/src/View/bestellungende.html
@@ -73,17 +73,10 @@
 
     <div class="row">
         <div>
-            <p class="mitte">In unserem Shop bieten wir viele verschiedenen Sorten von selbstgemachten Cookies an. Egal ob Glutenfrei, gefüllt oder
-            mit schokostückchen, wir bieten für jeden Geschmack etwas an!</p>
+            <p class="mitte">Vielen Dank für ihre Bestellung</p>
         </div>
 
-        <div class="blib">
-            <img src="../Bilder/kekks.png" alt="Paris" width="300" height="300">
-        </div>
 
-        <div>
-            <p class="unten">Schauen Sie sich doch unsere verschiedenen Cookie Sorten an und wenn Ihnen etwas zusagt dann würden wir uns über eine Bestellung unserer selbstgemachten Cookies freuen!</p>
-        </div>
 
 
     </div>
