--- a/src/View/product.html
+++ b/src/View/product.html
@@ -62,7 +62,7 @@
                 <li><a href="/login"><span class="glyphicon glyphicon-user"></span><?php echo $user ?></a></li>
 
                 <?php if ($warenkorb==1) { ?>
-                <li><a href="/warenkorb"><span class="glyphicon glyphicon-shopping-cart"></span>Warenkorb</a></li>
+                <li><a href="/warenkorbholen"><span class="glyphicon glyphicon-shopping-cart"></span>Warenkorb</a></li>
                 <li><a href="/logout"><span class="glyphicon "></span>Logout</a></li>
                 <?php } else { ?>
                 <?php } ?>
