--- a/src/View/product.html
+++ b/src/View/product.html
@@ -109,6 +109,11 @@
                     //echo $Beschreibung;
                     //echo $Überschrift;
                     //echo $Preis;
+
+                   if (isset($_SESSION["sucheProdukt"])) {unset($_SESSION["sucheProdukt"]);}
+
+
+
     ?>
 
 
